<resources>
    <string name="app_name">Assignment_2</string>
    <string name="action_settings">Settings</string>

    <string name="skanetrafiken">Skånetrafiken</string>
    <string name="reseplanerare">Reseplanerare</string>
    <string name="biljetter">Biljetter</string>
    <string name="tidtabeller">Tidtabeller</string>
    <string name="hallplats">Hållplatssök</string>
    <string name="from">Från: </string>
    <string name="to">Till: </string>
    <string name="time">Tid</string>
    <string name="date">Datum</string>
    <string name="change">Ändra</string>
    <string name="arrival">Ankomst</string>
    <string name="departure">Avgång</string>
    <string name="traficstyle">Trafikslag</string>
    <string name="favourites">Favoritresor</string>
    <string name="bevakningar">Bevakningar</string>
    <string name="rightNow">Just nu</string>
    <string name="search">Sök</string>
    <string name="retur">Returresa</string>
    <string name="tripPlanner">Reseplaneraren</string>
    
    <string-array name="spinnerDates">
        <item>idag</item>
        <item>imorgon</item>
        <item>lördag, 11 april</item>
        <item>söndag, 12 april</item>
        <item>måndag, 13 april</item>
        <item>tisdag, 14 april</item>
        <item>onsdag, 15 april</item>
        <item>torsdag, 16 april</item>
        <item>fredag, 17 april</item>
        <item>lördag, 18 april</item>
        <item>söndag, 19 april</item>
        <item>måndag, 20 april</item>
        <item>tisdag, 21 april</item>
        <item>onsdag, 22 april</item>
    </string-array>

    <string-array name="spinnerTimes">
        <item>12:00</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>
        <item>13:00</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>
        <item>14:00</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>14:45</item>
        <item>15:00</item>
        <item>15:15</item>
        <item>15:30</item>
        <item>15:45</item>
        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>
        <item>17:00</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>
    </string-array>
</resources>
