<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joelhenning.assignment_2.PlannerFragment"
    android:id="@+id/reseplanerare_layout"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#fff">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_weight="1" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Resans start"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                />


            </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Resans slut"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                />
            </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:id="@+id/textView6"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner2"
                android:layout_toRightOf="@id/textView6"
                android:entries="@array/spinnerDates"
                android:layout_marginTop="8dp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:id="@+id/textView12"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner2"
                android:layout_toRightOf="@id/textView12"
                android:entries="@array/spinnerTimes"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            >

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
               <RadioButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="40dp"
                   android:text="@string/departure"
                   android:id="@+id/radioButton1"/>
               <RadioButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/arrival"
                   android:layout_marginLeft="40dp"
                  />
            </RadioGroup>
            </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traficstyle"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:id="@+id/textView8"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:layout_toRightOf="@id/textView8"
                android:layout_marginLeft="148dp"
                android:layout_centerVertical="true"
                />
            </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/favourites"
                android:id="@+id/button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginLeft="24dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/bevakningar"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginLeft="24dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:layout_marginLeft="48dp"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retur"
                android:layout_marginLeft="40dp"
                />
            </LinearLayout>
    </LinearLayout>
</FrameLayout>
